Minor code cleanups around `Reference`